<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Backup</string>
    <string name="information_tab_title">Information</string>
    <string name="tasks_tab_title">Tasks</string>
    <string name="applications_tab_title">Applications</string>
    <string name="schedule_tab_title">Schedule</string>
    <string name="settings_mainmenu_item">Settings</string>
    <string name="help_mainmenu_item">Help</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="application_version_not_available">NA</string>
    <string name="applications_list_backups_available">Backups Available</string>
    <string name="applications_list_backup_available">Backup Available</string>
    <string name="applications_list_backup_not_available">No Backup</string>
    <string name="applications_popup_run">Run</string>
    <string name="applications_popup_uninstall">Uninstall</string>
    <string name="applications_popup_backup">Backup</string>
    <string name="applications_popup_wipe_data">Wipe Data</string>
    <string name="applications_popup_restore_backup">Restore</string>
    <string name="applications_popup_delete_backup">Delete</string>
    <string name="applications_popup_restore_what">What would you like to restore?</string>
    <string name="applications_popup_restore_data_only">Data Only</string>
    <string name="applications_popup_restore_apk_only">App Only</string>
    <string name="applications_popup_restore_data_and_apk">Data &amp; App</string>
    <string name="applications_information_current_version_info_title">Current Version Info</string>
    <string name="applications_information_app_name">App Name:</string>
    <string name="applications_information_package_name">Package Name:</string>
    <string name="applications_information_app_version">Package Version:</string>
    <string name="applications_information_APK_path">APK Path:</string>
    <string name="applications_information_data_path">Data Path:</string>
    <string name="uninstall_system_app_warning_dialog_title">Warning</string>
    <string name="uninstall_system_app_warning_dialog_text"> is a System package that may be needed for the device to work properly.\n\nRemoving this package may break your phone!\n\nWould you like to uninstall it (At your own risk).</string>
    <string name="toast_notification_apprun_notfound">Application Not Found</string>
    <string name="toast_notification_appdata_deleted">Data Deleted!</string>
    <string name="toast_notification_app_uninstalled_root">Application Uninstalled</string>
    <string name="information_tab_RootAccess">Root access:</string>
    <string name="information_tab_BusyBox">BusyBox:</string>
    <string name="information_tab_backupFolder">Backup Folder:</string>
    <string name="information_tab_offerBusyBox">A BusyBox installation has not been found. Would you like to download it from the Google Play Store?</string>
    <string name="information_tab_message_BusyBox_Not_Found">BusyBox Not Found</string>
    <string name="information_tab_systemStorage">System:</string>
    <string name="information_tab_dataStorage">Data:</string>
    <string name="information_tab_internalStorage">Internal:</string>
    <string name="wipe_dalvik_cache">Wipe Dalvik Cache</string>
    <string name="wipe_dalvik_cache_warning_dialog_title">Warning</string>
    <string name="wipe_dalvik_cache_warning_dialog_text">This will clear the Dalvik Cache of your device.\n\nThe device will be rebooted after this process.\n\nIt\'s normal for the device to take a long time to boot after this operation.\n\nDo you want to proceed?</string>
    <string name="reboot_Device">Reboot Device</string>
    <string name="delete_All_Backups">Delete All Backups</string>
    <string name="delete_All_Backups_Failed_Message">Couldn\'t delete all the backups. Please use a file manager to delete the folder </string>
    <string name="force_close_app">Force Close App</string>
    <string name="open_system_app_info">Open System App Info</string>

</resources>