<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/applicationsDialogButtonBackup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/applications_popup_backup" />

    <Button
        android:id="@+id/applicationsDialogButtonRun"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/applicationsDialogButtonBackup"
        android:text="@string/applications_popup_run" />

    <Button
        android:id="@+id/applicationsDialogButtonUninstall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/applications_popup_uninstall" />

    <Button
        android:id="@+id/applicationsDialogButtonWipeData"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/applicationsDialogButtonUninstall"
        android:text="@string/applications_popup_wipe_data" />

</RelativeLayout>