<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/rootView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_tab_RootAccess"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/busyboxView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_tab_BusyBox"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="3" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/information_tab_systemStorage"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/systemStorageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ProgressBar
                android:id="@+id/systemStorageProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/information_tab_dataStorage"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/dataStorageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ProgressBar
                android:id="@+id/dataStorageProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/ExternalStorageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/information_tab_internalStorage"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/ExternalStorageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ProgressBar
                android:id="@+id/ExternalStorageProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/backupFolderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_tab_backupFolder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>